removing dependency on jdbc drivers